@@ -1,13 +1,30 @@
-# codingweek-28
+# Codingweek-28
 
-## Jour1
-Livrable à réaliser : 
-- FXML NAVBarre (Kélian)
-- Page de connexion/d'inscription (Adrien)
-- Création des classes javas de tous les objets, en priorité: utilisateurs, items (matériels et services), designer les classes des messages et du chat (Killian)
+Groupe composé de MOY Kélian, THUILLIER Killian, CHRISTIEN Adrien, HOYAU Christophe
 
-But : finir connexion et création des items disponibles absolument
+## Créer un .jar
+exporter la variable d'environnement de javafx
+```sh
+export JAVAFX_HOME=/path/to/your/javafx/home
+```
 
-==> realisé ? : 
+clean build gradle puis créé le jar, le lance (pour tester) puis le déplace en le nommant `App.jar` dans le dossier `dist/App.jar`
+```sh
+./gradlew clean build && ./gradlew shadowjar && java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar build/libs/my-application-1.0.0.jar && cp build/libs/my-application-1.0.0.jar dist/App.jar
 
-## Jour2
+```
+
+## Planning
+
+### Pour Lundi 08/01
+
+Livrable prévu: connexion, inscription et gestion des utilisateurs.
+
+Terminer les étapes préliminaires et le modèle de donnée
+
+### Pour Mardi 09/01
+
+Fixer les bugs de la veille et avoir une archive JAR exécutable.
+
+Livrable prévu: page d'acceuil, création des objets bien et service ainsi que leur gestion, page Profil.
+
